[tool.poetry]
name = "spotifysynctool"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PySimpleGUI = "^4.55.1"
dotenv = "^0.0.5"
csv23 = "^0.3.2"
spotipy = "^2.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
